deploy/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-identity-service
  labels:
    app: ecommerce-identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-identity-service
  template:
    metadata:
      labels:
        app: ecommerce-identity-service
        elastic.logging/enabled: "true"
    spec:
      containers:
        - name: ecommerce-identity-service
          image: ghcr.io/jamess-lucass/ecommerce-identity-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 200Mi
              cpu: 100m
