deploy/base/service.yml
kind: Service
apiVersion: v1
metadata:
  name: ecommerce-identity-service
spec:
  selector:
    app: ecommerce-identity-service
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
